Fix related articles overflowing page on article page

--- a/mf_web/volumes/htdocs/sass/elements/article-nav.scss
+++ b/mf_web/volumes/htdocs/sass/elements/article-nav.scss
@@ -23,6 +23,7 @@
             > .list {
                 display: flex;
                 justify-content: center;
+                flex-wrap: wrap;
 
                 > .item {
                     > .link {
