--- a/mf_web/volumes/htdocs/sass/elements/std-article.scss
+++ b/mf_web/volumes/htdocs/sass/elements/std-article.scss
@@ -8,5 +8,9 @@
                 background-color: $color-blue-3;
             }
         }
+
+        > .nav {
+            order: 1;
+        }
     }
 }
